--- a/hive_cortex_elasticsearch/docker-compose.yml
+++ b/hive_cortex_elasticsearch/docker-compose.yml
@@ -1,82 +1,89 @@
-version: "3.7"
-
+version: "3"
 services:
-  cassandra:
-    container_name: cassandra
-    image: cassandra:3.11
-    restart: unless-stopped
-    hostname: cassandra
+  thehive:
+    image: strangebee/thehive:5.2
+    depends_on:
+      - cassandra
+      - elasticsearch
+      - minio
+      - cortex
+    mem_limit: 1500m
+    ports:
+      - "9000:9000"
     environment:
-      - MAX_HEAP_SIZE=1G
-      - HEAP_NEWSIZE=1G
-      - CASSANDRA_CLUSTER_NAME=thp
+      - JVM_OPTS="-Xms1024M -Xmx1024M"
+    command:
+      - --secret
+      - "mySecretForTheHive"
+      - "--cql-hostnames"
+      - "cassandra"
+      - "--index-backend"
+      - "elasticsearch"
+      - "--es-hostnames"
+      - "elasticsearch"
+      - "--s3-endpoint"
+      - "http://minio:9000"
+      - "--s3-access-key"
+      - "minioadmin"
+      - "--s3-secret-key"
+      - "minioadmin"
+      - "--s3-bucket"
+      - "thehive"
+      - "--s3-use-path-access-style"
+      - "--cortex-hostnames"
+      - "cortex"
+      - "--cortex-keys"
+      # put cortex api key once cortex is bootstraped
+      - "<cortex_api_key>"
+
+  cassandra:
+    image: 'cassandra:4'
+    mem_limit: 1600m
+    ports:
+      - "9042:9042"
+    environment:
+      - MAX_HEAP_SIZE=1024M
+      - HEAP_NEWSIZE=1024M
+      - CASSANDRA_CLUSTER_NAME=TheHive
     volumes:
-      - ./cassandra/data:/var/lib/cassandra/data
-    networks:
-      - Hive
+      - cassandradata:/var/lib/cassandra
+    restart: on-failure
 
   elasticsearch:
-    container_name: elasticsearch
-    image: elasticsearch:7.11.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.12
+    mem_limit: 1500m
+    ports:
+      - "9200:9200"
     environment:
-      - http.host=0.0.0.0
       - discovery.type=single-node
-      - cluster.name=hive
-      - script.allowed_types= inline
-      - thread_pool.search.queue_size=100000
-      - thread_pool.write.queue_size=10000
-      - gateway.recover_after_nodes=1
       - xpack.security.enabled=false
-      - bootstrap.memory_lock=true
-      - ES_JAVA_OPTS=-Xms256m -Xmx256m
-    ulimits:
-      nofile:
-        soft: 65536
-        hard: 65536
     volumes:
-      - ./elasticsearch/data:/usr/share/elasticsearch/data
-      - ./elasticsearch/logs:/usr/share/elasticsearch/logs
-    networks:
-      - Hive
-  
+      - elasticsearchdata:/usr/share/elasticsearch/data
+
+  minio:
+    image: quay.io/minio/minio
+    mem_limit: 512m
+    command: ["minio", "server", "/data", "--console-address", ":9090"]
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    ports:
+      - "9090:9090"
+    volumes:
+      - "miniodata:/data"
+
   cortex:
-    container_name: cortex
-    image: thehiveproject/cortex:latest
+    image: thehiveproject/cortex:3.1.7
     depends_on:
       - elasticsearch
     environment:
-      - 'JOB_DIRECTORY=/opt/cortex/jobs'
-    ports:
-      - '0.0.0.0:9001:9001'
+      - job_directory=/tmp/cortex-jobs
     volumes:
-      - ./cortex/application.conf:/etc/cortex/application.conf
-      - '/var/run/docker.sock:/var/run/docker.sock'
-      - ./cortex/log/:/var/log/cortex
-      - /tmp:/tmp
-      #- ./cortex/Cortex-Analyzers:/opt/cortex/analyzers
-      #- .cortex/Cortex-Analyzers/analyzers.json:/opt/cortex/analyzers/analyzers.json
-    privileged: true
-    networks:
-      - Hive
-  
-  thehive:
-    container_name: thehive
-    image: 'thehiveproject/thehive4:latest'
-    restart: unless-stopped
-    depends_on:
-      - cassandra
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /tmp/cortex-jobs:/tmp/cortex-jobs
     ports:
-      - '0.0.0.0:9000:9000'
-    volumes:
-      - ./thehive/application.conf:/etc/thehive/application.conf
-      - ./thehive/data:/opt/thp/thehive/data
-      - ./thehive/index:/opt/thp/thehive/index
-    command:
-      --cortex-port 9001
-      --cortex-keys ${CORTEX_KEY}
-    networks:
-      - Hive
-      
-networks:
-    Hive:
-        driver: bridge
+      - "9001:9001"
+
+volumes:
+  miniodata:
+  cassandradata:
